7 - continue refactoring part 1